--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
     - name: 테스트 결과를 댓글로 추가
       uses: actions/github-script@0.9.0
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.TOKEN_GITHUB }}
         script: |
           const fs = require('fs');
           const { context } = require('@actions/github');
