[TEST]: JDK 버전 변경

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,11 @@ jobs:
     - name: Checkout 코드
       uses: actions/checkout@v2
       
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '17'
+        distribution: 'amazon-corretto'
         
     - name: Gradle 빌드 및 테스트
       run: ./gradlew test --info
