[TEST]: distribution 수정

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '17'
-        distribution: 'amazon-corretto'
+        distribution: 'corretto'
         
     - name: Gradle 빌드 및 테스트
       run: ./gradlew test --info
