--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
         distribution: 'corretto'
         
     - name: Gradle 빌드 및 테스트
-      run: ./gradlew test --info
+      run: chmod +x ./gradlew && ./gradlew test --info
       
     - name: 테스트 결과를 댓글로 추가
       uses: actions/github-script@0.9.0
