--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.25.3'
+    implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
 }
 
 compileJava.options.encoding = 'UTF-8'
